Changelog implementation and fix for screenshots section visible even if missing

--- a/_styles/styles.css
+++ b/_styles/styles.css
@@ -210,7 +210,9 @@ h1#appTitle {
 #gameDetails .genresSection,
 #gameDetails .seriesSection,
 #gameDetails .requiredProductsSection,
-#gameDetails .dlcSection {
+#gameDetails .dlcSection,
+#gameDetails .screenshotsSection,
+#gameDetails .changelogSection {
     display: none;
 }
 
@@ -218,7 +220,9 @@ h1#appTitle {
 #gameDetails .genres .genresSection,
 #gameDetails .series .seriesSection,
 #gameDetails .requiredProducts .requiredProductsSection,
-#gameDetails .dlc .dlcSection {
+#gameDetails .dlc .dlcSection,
+#gameDetails .screenshots .screenshotsSection,
+#gameDetails .changelog .changelogSection {
     display: block;
 }
 
